# EscalatorLang

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.json
.claude/hooks/: format_and_check.sh
.github/workflows/: ci.yml  docs.yml
docs/: ejemplos.md  gramatica.ebnf  index.md
docs/guia/: ascensor.md  control.md  estructura.md  expresiones.md  tipos.md
docs/primeros-pasos/: instalacion.md  uso.md
docs/referencia/: errores.md  gramatica.md  semantica.md  tokens.md
ejemplos/: index.html
examples/: prueba_error_semantico.asc  prueba_error_sintactico.asc  prueba_valida.asc
guia/ascensor/: index.html
guia/control/: index.html
guia/estructura/: index.html
guia/expresiones/: index.html
guia/tipos/: index.html
primeros-pasos/instalacion/: index.html
primeros-pasos/uso/: index.html
referencia/errores/: index.html
referencia/gramatica/: index.html
referencia/semantica/: index.html
referencia/tokens/: index.html
search/: search_index.json
src/elevator_lang/: __init__.py  __main__.py  ast_nodes.py  cli.py  elevator_state.py  errors.py  highlighting.py  lexer.py  messages.py  parser.py  semantic_analyzer.py  symbols.py  tokens.py  visitor.py
tests/: test_cli.py  test_lexer.py  test_parser.py  test_semantic.py  test_smoke.py
